--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.6.2",
+    "axios": "^1.6.5",
     "next": "14.0.4",
     "nodemailer": "^6.9.7",
     "nodemailer-sendgrid-transport": "^0.2.0",
@@ -21,7 +21,8 @@
     "sass": "^1.69.5",
     "sweetalert2": "^11.10.1",
     "sweetalert2-react-content": "^5.0.7",
-    "swiper": "^8.4.7"
+    "swiper": "^8.4.7",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
