--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.6",
+    "@mui/material": "^5.15.6",
+    "@mui/x-data-grid": "^6.19.2",
+    "@mui/x-date-pickers": "^6.19.2",
+    "@types/js-cookie": "^3.0.6",
     "axios": "^1.6.5",
+    "js-cookie": "^3.0.5",
     "next": "14.0.4",
     "nodemailer": "^6.9.7",
     "nodemailer-sendgrid-transport": "^0.2.0",
@@ -32,6 +40,7 @@
     "@types/react-modal-video": "^1.2.3",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "prettier": "3.2.4",
     "typescript": "^5"
   }
 }
