--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/x-date-pickers": "^6.19.2",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.6.5",
+    "datatables.net-dt": "^1.13.8",
     "js-cookie": "^3.0.5",
     "next": "14.0.4",
     "nodemailer": "^6.9.7",
