--- a/package.json
+++ b/package.json
@@ -12,19 +12,23 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.6",
+    "@mui/lab": "^5.0.0-alpha.164",
     "@mui/material": "^5.15.6",
     "@mui/x-data-grid": "^6.19.2",
     "@mui/x-date-pickers": "^6.19.2",
+    "@tabler/icons-react": "^2.47.0",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.6.5",
     "datatables.net-dt": "^1.13.8",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "next": "14.0.4",
     "nodemailer": "^6.9.7",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "react": "^18",
     "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18",
+    "react-helmet-async": "^2.0.4",
     "react-modal-video": "^2.0.1",
     "react-tabs": "^6.0.2",
     "sass": "^1.69.5",
