--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.6.5",
     "datatables.net-dt": "^1.13.8",
+    "dayjs": "^1.11.10",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "next": "14.0.4",
