--- a/package.json
+++ b/package.json
@@ -39,14 +39,14 @@
     "zustand": "^4.5.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "20.11.29",
     "@types/nodemailer": "^6.4.14",
-    "@types/react": "^18",
+    "@types/react": "18.2.67",
     "@types/react-dom": "^18",
     "@types/react-modal-video": "^1.2.3",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "prettier": "3.2.4",
-    "typescript": "^5"
+    "typescript": "5.4.2"
   }
 }
