--- a/package.json
+++ b/package.json
@@ -21,15 +21,20 @@
     "axios": "^1.6.5",
     "datatables.net-dt": "^1.13.8",
     "dayjs": "^1.11.10",
+    "i18next": "^23.11.2",
+    "i18next-browser-languagedetector": "^7.2.1",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "next": "14.0.4",
+    "next-i18next": "^15.3.0",
+    "next-intl": "^3.12.0",
     "nodemailer": "^6.9.7",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "react": "^18",
     "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18",
     "react-helmet-async": "^2.0.4",
+    "react-i18next": "^14.1.1",
     "react-modal-video": "^2.0.1",
     "react-tabs": "^6.0.2",
     "sass": "^1.69.5",
