--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/x-date-pickers": "^6.19.2",
     "@tabler/icons-react": "^2.47.0",
     "@types/js-cookie": "^3.0.6",
+    "@types/material-ui": "^0.21.17",
     "axios": "^1.6.5",
     "datatables.net-dt": "^1.13.8",
     "dayjs": "^1.11.10",
