--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^5.3.3",
     "datatables.net-dt": "^1.13.8",
     "dayjs": "^1.11.10",
+    "html-react-parser": "^5.1.10",
     "i18next": "^23.11.2",
     "i18next-browser-languagedetector": "^7.2.1",
     "js-cookie": "^3.0.5",
@@ -42,6 +43,7 @@
     "react-helmet-async": "^2.0.4",
     "react-i18next": "^14.1.1",
     "react-modal-video": "^2.0.1",
+    "react-quill": "^2.0.0",
     "react-tabs": "^6.0.2",
     "sass": "^1.69.5",
     "sweetalert2": "^11.10.1",
@@ -50,6 +52,7 @@
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@types/domhandler": "^2.4.5",
     "@types/node": "20.11.29",
     "@types/nodemailer": "^6.4.14",
     "@types/react": "18.2.67",
