--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tabler/icons-react": "^2.47.0",
     "@types/js-cookie": "^3.0.6",
     "@types/material-ui": "^0.21.17",
+    "@types/react-big-calendar": "^1.8.9",
     "axios": "^1.6.5",
     "bootstrap": "^5.3.3",
     "datatables.net-dt": "^1.13.8",
@@ -38,11 +39,13 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "react": "^18",
     "react-accessible-accordion": "^5.0.0",
+    "react-big-calendar": "^1.12.2",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18",
     "react-helmet-async": "^2.0.4",
     "react-i18next": "^14.1.1",
     "react-modal-video": "^2.0.1",
+    "react-mui-scheduler": "^2.0.4",
     "react-quill": "^2.0.0",
     "react-tabs": "^6.0.2",
     "sass": "^1.69.5",
